# lcd_mask_families

./: .gitignore  AGENT.md  README.md  SKILL.md  pyproject.toml
docs/: current_stage.md  downstream_readiness.md  family_metadata.md  family_taxonomy.md  implementation_plan.md  optic_system_handshake.md  v0_1_contract.md  v0_2_contract.md
examples/: blocks_instance.json  blocks_instance.yaml  fourier_lowfreq_instance.json  fourier_lowfreq_instance.yaml  radial_zones_instance.json  radial_zones_instance.yaml  seeded_lowfreq_noise_instance.json  seeded_lowfreq_noise_instance.yaml  simple_sequence.yaml  stripes_instance.json  stripes_instance.yaml
schemas/: family_metadata.schema.json  mask_family_spec.schema.json  mask_instance_spec.schema.json  mask_sequence_spec.schema.json
src/lcd_mask_families/: __init__.py  backends.py  constants.py  grids.py  hashing.py  metadata.py  projection.py  render.py  serialization.py  specs.py
src/lcd_mask_families/families/: __init__.py  blocks.py  fourier_lowfreq.py  radial_zones.py  registry.py  seeded_lowfreq_noise.py  stripes.py
tests/: test_api_loop.py  test_blocks_render.py  test_examples_contract.py  test_examples_load.py  test_family_metadata.py  test_fourier_lowfreq_render.py  test_hash_identity.py  test_hash_stability.py  test_projection.py  test_public_api_exports.py  test_radial_zones_render.py  test_render_determinism.py  test_schema_examples.py  test_seeded_lowfreq_noise_render.py  test_sequence_render.py  test_stripes_render.py  test_v0_2_contract.py
